// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI: ExtendedTextInput should match snapshot 1`] = `
<View>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Poppins-Regular",
          "fontSize": 17,
          "letterSpacing": 0.37,
          "lineHeight": 22,
        },
        Array [
          Object {},
          Object {
            "color": "red",
            "marginBottom": 10,
          },
        ],
      ]
    }
  >
    test input
  </Text>
  <TextInput
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    selectionColor="#FFB452"
    style={
      Array [
        Object {
          "backgroundColor": "#220A40E6",
          "borderColor": "#FFB452",
          "borderRadius": 24,
          "borderWidth": 1,
          "color": "#FFFFFF",
          "paddingHorizontal": 24,
          "paddingVertical": 16,
        },
        Object {
          "backgroundColor": "yellow",
        },
        false,
      ]
    }
    value="test input"
  />
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Poppins-Regular",
          "fontSize": 17,
          "letterSpacing": 0.37,
          "lineHeight": 22,
        },
        Array [
          Object {},
          Object {
            "color": "red",
            "marginTop": 10,
          },
        ],
      ]
    }
  >
    smth broken
  </Text>
</View>
`;

exports[`UI: ExtendedTextInput should match snapshot 2`] = `
<View>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Poppins-Regular",
          "fontSize": 17,
          "letterSpacing": 0.37,
          "lineHeight": 22,
        },
        Array [
          Object {},
          Object {
            "color": "red",
            "marginBottom": 10,
          },
        ],
      ]
    }
  >
    password toggle test input
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Array [
          Object {
            "backgroundColor": "#220A40E6",
            "borderColor": "#FFB452",
            "borderRadius": 24,
            "borderWidth": 1,
            "color": "#FFFFFF",
            "paddingHorizontal": 24,
            "paddingVertical": 16,
          },
          Object {
            "backgroundColor": "yellow",
          },
          false,
        ],
      ]
    }
  >
    <TextInput
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      secureTextEntry={true}
      selectionColor="#FFB452"
      style={
        Object {
          "color": "#FFFFFF",
          "flex": 1,
          "padding": 0,
        }
      }
      value="test input"
    />
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
          "paddingLeft": 24,
        }
      }
    >
      <Svg
        fill="none"
        height={17}
        viewBox="0 0 24 17"
        width={24}
      >
        <Path
          d="M12 12.818c1.29 0 2.386-.45 3.286-1.35.9-.9 1.35-1.995 1.35-3.286s-.45-2.387-1.35-3.287c-.9-.9-1.995-1.35-3.286-1.35-1.29 0-2.386.45-3.286 1.35-.9.9-1.35 1.996-1.35 3.287 0 1.29.45 2.386 1.35 3.286.9.9 1.995 1.35 3.286 1.35zm0-1.582c-.854 0-1.577-.295-2.168-.886-.591-.59-.887-1.314-.887-2.168 0-.855.296-1.577.887-2.168.59-.591 1.313-.887 2.168-.887.854 0 1.577.296 2.168.887.591.59.887 1.313.887 2.168 0 .854-.296 1.577-.887 2.168-.59.59-1.313.886-2.168.886zm0 5.128c-2.655 0-5.055-.755-7.2-2.264-2.145-1.51-3.745-3.482-4.8-5.918 1.055-2.437 2.655-4.41 4.8-5.918C6.945.754 9.345 0 12 0c2.655 0 5.055.755 7.2 2.264 2.146 1.509 3.745 3.481 4.8 5.918-1.055 2.436-2.654 4.409-4.8 5.918-2.145 1.51-4.545 2.264-7.2 2.264zm0-1.637c2.2 0 4.223-.595 6.068-1.786a11.592 11.592 0 004.214-4.76 11.592 11.592 0 00-4.214-4.758A10.967 10.967 0 0012 1.636c-2.2 0-4.223.596-6.068 1.787A11.787 11.787 0 001.69 8.182a11.787 11.787 0 004.24 4.759A10.967 10.967 0 0012 14.727z"
          fill="#fff"
        />
      </Svg>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Poppins-Regular",
          "fontSize": 17,
          "letterSpacing": 0.37,
          "lineHeight": 22,
        },
        Array [
          Object {},
          Object {
            "color": "red",
            "marginTop": 10,
          },
        ],
      ]
    }
  >
    smth broken
  </Text>
</View>
`;
